check adding default scopes if allowed (ClientScopesClientRegistrationPolicy)