@@ -57,7 +57,8 @@ public class ClientScopesClientRegistrationPolicy implements ClientRegistrationP
         List<String> requestedOptionalScopeNames = context.getClient().getOptionalClientScopes();
 
         List<String> allowedScopeNames = new ArrayList<>();
-        allowedScopeNames.addAll(getAllowedScopeNames(realm, true));
+        List<String> allowedDefaultScopeNames = getAllowedScopeNames(realm, true);
+        allowedScopeNames.addAll(allowedDefaultScopeNames);
         allowedScopeNames.addAll(getAllowedScopeNames(realm, false));
 
         checkClientScopesAllowed(requestedDefaultScopeNames, allowedScopeNames);
@@ -65,9 +66,9 @@ public class ClientScopesClientRegistrationPolicy implements ClientRegistrationP
 
         if (componentModel.get(ClientScopesClientRegistrationPolicyFactory.ADD_DEFAULT_SCOPES, false) && (requestedDefaultScopeNames != null || requestedOptionalScopeNames != null)) {
             //if requested scopes list is not empty and add-default-scopes is true, add realm default scopes
-            List<String> defaultRealmScopes = realm.getDefaultClientScopesStream(true).map(ClientScopeModel::getName).collect(Collectors.toList());
+            List<String> defaultRealmScopes = realm.getDefaultClientScopesStream(true).map(ClientScopeModel::getName).filter(allowedDefaultScopeNames::contains).collect(Collectors.toList());
             if (!defaultRealmScopes.isEmpty()) {
-                List<String> currentDefaultScopes = new ArrayList<>(context.getClient().getDefaultClientScopes() == null ? new ArrayList<>() : context.getClient().getDefaultClientScopes());
+                List<String> currentDefaultScopes = requestedDefaultScopeNames == null ? new ArrayList<>() : requestedDefaultScopeNames;
                 for (String s : defaultRealmScopes) {
                     if (!currentDefaultScopes.contains(s)) {
                         currentDefaultScopes.add(s);
@@ -145,7 +146,7 @@ public class ClientScopesClientRegistrationPolicy implements ClientRegistrationP
         // If allowDefaultScopes, then realm default scopes are allowed as default scopes (+ optional scopes are allowed as optional scopes)
         boolean allowDefaultScopes = componentModel.get(ClientScopesClientRegistrationPolicyFactory.ALLOW_DEFAULT_SCOPES, true);
         if (allowDefaultScopes) {
-            allAllowed.addAll(realm.getDefaultClientScopesStream(defaultScopes).map(ClientScopeModel::getName).toList());
+            allAllowed.addAll(realm.getDefaultClientScopesStream(defaultScopes).map(ClientScopeModel::getName).collect(Collectors.toList()));
         }
 
         return allAllowed;
